versions/0.24.0/_sources/refs/_aws-cdk_aws-autoscalingplans.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"nF9JvX/6fJh9M4yA/LumJN6il9byoNzlNQIu5tJqD1I="}

@aws-cdk/aws-autoscalingplans
=============================

.. mdinclude:: ./__aws-cdk_aws-autoscalingplans.README.md

Reference
---------

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.AutoScalingPlans/0.24.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.AutoScalingPlans" Version="0.24.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.AutoScalingPlans --version 0.24.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.AutoScalingPlans" version="0.24.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/autoscalingplans/0.24.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:autoscalingplans:jar:0.24.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="autoscalingplans" rev="0.24.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>autoscalingplans</artifactId>
           <version>0.24.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:autoscalingplans:0.24.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='autoscalingplans', version='0.24.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-autoscalingplans/v/0.24.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-autoscalingplans@0.24.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-autoscalingplans": "^0.24.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-autoscalingplans@0.24.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-autoscalingplans/v/0.24.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-autoscalingplans@0.24.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-autoscalingplans": "^0.24.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-autoscalingplans@0.24.0



.. py:module:: @aws-cdk/aws-autoscalingplans

CfnScalingPlan
^^^^^^^^^^^^^^

.. py:class:: CfnScalingPlan(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScalingPlans;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlan;

      .. code-tab:: javascript

         const { CfnScalingPlan } = require('@aws-cdk/aws-autoscalingplans');

      .. code-tab:: typescript

         import { CfnScalingPlan } from '@aws-cdk/aws-autoscalingplans';



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param scope: scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: scoped id of the resource
   :type id: string
   :param props: resource properties
   :type props: :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlanProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.Resource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlanProps`\  *(readonly)*


   .. py:attribute:: scalingPlanArn

      :type: string *(readonly)*


   .. py:attribute:: scalingPlanName

      :type: string *(readonly)*


   .. py:attribute:: scalingPlanVersion

      :type: string *(readonly)*

   .. py:class:: ApplicationSourceProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlan.ApplicationSourceProperty;

         .. code-tab:: javascript

            // CfnScalingPlan.ApplicationSourceProperty is an interface

         .. code-tab:: typescript

            import { CfnScalingPlan.ApplicationSourceProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: cloudFormationStackArn

         ``CfnScalingPlan.ApplicationSourceProperty.CloudFormationStackARN``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-applicationsource.html#cfn-autoscalingplans-scalingplan-applicationsource-cloudformationstackarn


         :type: string *(optional)*


      .. py:attribute:: tagFilters

         ``CfnScalingPlan.ApplicationSourceProperty.TagFilters``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-applicationsource.html#cfn-autoscalingplans-scalingplan-applicationsource-tagfilters


         :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlan.TagFilterProperty`\ )[] *(optional)*


   .. py:class:: CustomizedLoadMetricSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlan.CustomizedLoadMetricSpecificationProperty;

         .. code-tab:: javascript

            // CfnScalingPlan.CustomizedLoadMetricSpecificationProperty is an interface

         .. code-tab:: typescript

            import { CfnScalingPlan.CustomizedLoadMetricSpecificationProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: metricName

         ``CfnScalingPlan.CustomizedLoadMetricSpecificationProperty.MetricName``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedloadmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedloadmetricspecification-metricname


         :type: string


      .. py:attribute:: namespace

         ``CfnScalingPlan.CustomizedLoadMetricSpecificationProperty.Namespace``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedloadmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedloadmetricspecification-namespace


         :type: string


      .. py:attribute:: statistic

         ``CfnScalingPlan.CustomizedLoadMetricSpecificationProperty.Statistic``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedloadmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedloadmetricspecification-statistic


         :type: string


      .. py:attribute:: dimensions

         ``CfnScalingPlan.CustomizedLoadMetricSpecificationProperty.Dimensions``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedloadmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedloadmetricspecification-dimensions


         :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlan.MetricDimensionProperty`\ )[] *(optional)*


      .. py:attribute:: unit

         ``CfnScalingPlan.CustomizedLoadMetricSpecificationProperty.Unit``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedloadmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedloadmetricspecification-unit


         :type: string *(optional)*


   .. py:class:: CustomizedScalingMetricSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlan.CustomizedScalingMetricSpecificationProperty;

         .. code-tab:: javascript

            // CfnScalingPlan.CustomizedScalingMetricSpecificationProperty is an interface

         .. code-tab:: typescript

            import { CfnScalingPlan.CustomizedScalingMetricSpecificationProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: metricName

         ``CfnScalingPlan.CustomizedScalingMetricSpecificationProperty.MetricName``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedscalingmetricspecification-metricname


         :type: string


      .. py:attribute:: namespace

         ``CfnScalingPlan.CustomizedScalingMetricSpecificationProperty.Namespace``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedscalingmetricspecification-namespace


         :type: string


      .. py:attribute:: statistic

         ``CfnScalingPlan.CustomizedScalingMetricSpecificationProperty.Statistic``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedscalingmetricspecification-statistic


         :type: string


      .. py:attribute:: dimensions

         ``CfnScalingPlan.CustomizedScalingMetricSpecificationProperty.Dimensions``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedscalingmetricspecification-dimensions


         :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlan.MetricDimensionProperty`\ )[] *(optional)*


      .. py:attribute:: unit

         ``CfnScalingPlan.CustomizedScalingMetricSpecificationProperty.Unit``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-customizedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-customizedscalingmetricspecification-unit


         :type: string *(optional)*


   .. py:class:: MetricDimensionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlan.MetricDimensionProperty;

         .. code-tab:: javascript

            // CfnScalingPlan.MetricDimensionProperty is an interface

         .. code-tab:: typescript

            import { CfnScalingPlan.MetricDimensionProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: name

         ``CfnScalingPlan.MetricDimensionProperty.Name``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-metricdimension.html#cfn-autoscalingplans-scalingplan-metricdimension-name


         :type: string


      .. py:attribute:: value

         ``CfnScalingPlan.MetricDimensionProperty.Value``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-metricdimension.html#cfn-autoscalingplans-scalingplan-metricdimension-value


         :type: string


   .. py:class:: PredefinedLoadMetricSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlan.PredefinedLoadMetricSpecificationProperty;

         .. code-tab:: javascript

            // CfnScalingPlan.PredefinedLoadMetricSpecificationProperty is an interface

         .. code-tab:: typescript

            import { CfnScalingPlan.PredefinedLoadMetricSpecificationProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: predefinedLoadMetricType

         ``CfnScalingPlan.PredefinedLoadMetricSpecificationProperty.PredefinedLoadMetricType``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-predefinedloadmetricspecification.html#cfn-autoscalingplans-scalingplan-predefinedloadmetricspecification-predefinedloadmetrictype


         :type: string


      .. py:attribute:: resourceLabel

         ``CfnScalingPlan.PredefinedLoadMetricSpecificationProperty.ResourceLabel``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-predefinedloadmetricspecification.html#cfn-autoscalingplans-scalingplan-predefinedloadmetricspecification-resourcelabel


         :type: string *(optional)*


   .. py:class:: PredefinedScalingMetricSpecificationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlan.PredefinedScalingMetricSpecificationProperty;

         .. code-tab:: javascript

            // CfnScalingPlan.PredefinedScalingMetricSpecificationProperty is an interface

         .. code-tab:: typescript

            import { CfnScalingPlan.PredefinedScalingMetricSpecificationProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: predefinedScalingMetricType

         ``CfnScalingPlan.PredefinedScalingMetricSpecificationProperty.PredefinedScalingMetricType``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-predefinedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-predefinedscalingmetricspecification-predefinedscalingmetrictype


         :type: string


      .. py:attribute:: resourceLabel

         ``CfnScalingPlan.PredefinedScalingMetricSpecificationProperty.ResourceLabel``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-predefinedscalingmetricspecification.html#cfn-autoscalingplans-scalingplan-predefinedscalingmetricspecification-resourcelabel


         :type: string *(optional)*


   .. py:class:: ScalingInstructionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlan.ScalingInstructionProperty;

         .. code-tab:: javascript

            // CfnScalingPlan.ScalingInstructionProperty is an interface

         .. code-tab:: typescript

            import { CfnScalingPlan.ScalingInstructionProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: maxCapacity

         ``CfnScalingPlan.ScalingInstructionProperty.MaxCapacity``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-maxcapacity


         :type: number or :py:class:`@aws-cdk/cdk.Token`\ 


      .. py:attribute:: minCapacity

         ``CfnScalingPlan.ScalingInstructionProperty.MinCapacity``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-mincapacity


         :type: number or :py:class:`@aws-cdk/cdk.Token`\ 


      .. py:attribute:: resourceId

         ``CfnScalingPlan.ScalingInstructionProperty.ResourceId``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-resourceid


         :type: string


      .. py:attribute:: scalableDimension

         ``CfnScalingPlan.ScalingInstructionProperty.ScalableDimension``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-scalabledimension


         :type: string


      .. py:attribute:: serviceNamespace

         ``CfnScalingPlan.ScalingInstructionProperty.ServiceNamespace``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-servicenamespace


         :type: string


      .. py:attribute:: targetTrackingConfigurations

         ``CfnScalingPlan.ScalingInstructionProperty.TargetTrackingConfigurations``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-targettrackingconfigurations


         :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlan.TargetTrackingConfigurationProperty`\ )[]


      .. py:attribute:: customizedLoadMetricSpecification

         ``CfnScalingPlan.ScalingInstructionProperty.CustomizedLoadMetricSpecification``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-customizedloadmetricspecification


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlan.CustomizedLoadMetricSpecificationProperty`\  *(optional)*


      .. py:attribute:: disableDynamicScaling

         ``CfnScalingPlan.ScalingInstructionProperty.DisableDynamicScaling``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-disabledynamicscaling


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: predefinedLoadMetricSpecification

         ``CfnScalingPlan.ScalingInstructionProperty.PredefinedLoadMetricSpecification``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-predefinedloadmetricspecification


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlan.PredefinedLoadMetricSpecificationProperty`\  *(optional)*


      .. py:attribute:: predictiveScalingMaxCapacityBehavior

         ``CfnScalingPlan.ScalingInstructionProperty.PredictiveScalingMaxCapacityBehavior``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-predictivescalingmaxcapacitybehavior


         :type: string *(optional)*


      .. py:attribute:: predictiveScalingMaxCapacityBuffer

         ``CfnScalingPlan.ScalingInstructionProperty.PredictiveScalingMaxCapacityBuffer``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-predictivescalingmaxcapacitybuffer


         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: predictiveScalingMode

         ``CfnScalingPlan.ScalingInstructionProperty.PredictiveScalingMode``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-predictivescalingmode


         :type: string *(optional)*


      .. py:attribute:: scalingPolicyUpdateBehavior

         ``CfnScalingPlan.ScalingInstructionProperty.ScalingPolicyUpdateBehavior``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-scalingpolicyupdatebehavior


         :type: string *(optional)*


      .. py:attribute:: scheduledActionBufferTime

         ``CfnScalingPlan.ScalingInstructionProperty.ScheduledActionBufferTime``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-scalinginstruction.html#cfn-autoscalingplans-scalingplan-scalinginstruction-scheduledactionbuffertime


         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


   .. py:class:: TagFilterProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlan.TagFilterProperty;

         .. code-tab:: javascript

            // CfnScalingPlan.TagFilterProperty is an interface

         .. code-tab:: typescript

            import { CfnScalingPlan.TagFilterProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: key

         ``CfnScalingPlan.TagFilterProperty.Key``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-tagfilter.html#cfn-autoscalingplans-scalingplan-tagfilter-key


         :type: string


      .. py:attribute:: values

         ``CfnScalingPlan.TagFilterProperty.Values``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-tagfilter.html#cfn-autoscalingplans-scalingplan-tagfilter-values


         :type: :py:class:`@aws-cdk/cdk.Token`\  or (string or :py:class:`@aws-cdk/cdk.Token`\ )[] *(optional)*


   .. py:class:: TargetTrackingConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.AutoScalingPlans;

         .. code-tab:: java

            import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlan.TargetTrackingConfigurationProperty;

         .. code-tab:: javascript

            // CfnScalingPlan.TargetTrackingConfigurationProperty is an interface

         .. code-tab:: typescript

            import { CfnScalingPlan.TargetTrackingConfigurationProperty } from '@aws-cdk/aws-autoscalingplans';





      .. py:attribute:: targetValue

         ``CfnScalingPlan.TargetTrackingConfigurationProperty.TargetValue``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-targetvalue


         :type: number or :py:class:`@aws-cdk/cdk.Token`\ 


      .. py:attribute:: customizedScalingMetricSpecification

         ``CfnScalingPlan.TargetTrackingConfigurationProperty.CustomizedScalingMetricSpecification``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-customizedscalingmetricspecification


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlan.CustomizedScalingMetricSpecificationProperty`\  *(optional)*


      .. py:attribute:: disableScaleIn

         ``CfnScalingPlan.TargetTrackingConfigurationProperty.DisableScaleIn``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-disablescalein


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: estimatedInstanceWarmup

         ``CfnScalingPlan.TargetTrackingConfigurationProperty.EstimatedInstanceWarmup``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-estimatedinstancewarmup


         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: predefinedScalingMetricSpecification

         ``CfnScalingPlan.TargetTrackingConfigurationProperty.PredefinedScalingMetricSpecification``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-predefinedscalingmetricspecification


         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlan.PredefinedScalingMetricSpecificationProperty`\  *(optional)*


      .. py:attribute:: scaleInCooldown

         ``CfnScalingPlan.TargetTrackingConfigurationProperty.ScaleInCooldown``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-scaleincooldown


         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: scaleOutCooldown

         ``CfnScalingPlan.TargetTrackingConfigurationProperty.ScaleOutCooldown``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-autoscalingplans-scalingplan-targettrackingconfiguration.html#cfn-autoscalingplans-scalingplan-targettrackingconfiguration-scaleoutcooldown


         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*



   .. py:method:: apply(aspect)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.apply>`

      Applies the aspect to this Constructs node



      :param aspect: 
      :type aspect: :py:class:`@aws-cdk/cdk.IAspect`\ 


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.Referenceable <@aws-cdk/cdk.Referenceable.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned

      unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.Resource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:method:: toCloudFormation() -> json

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.toCloudFormation>`

      Emits CloudFormation for this resource.



      :rtype: json


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.ResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.prepare>`

      Automatically detect references in this StackElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.logicalId>`

      The logical ID for this CloudFormation stack element. The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: stack

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stack>`

      The stack this Construct has been made a part of



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Stack`\ 


CfnScalingPlanProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnScalingPlanProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.AutoScalingPlans;

      .. code-tab:: java

         import software.amazon.awscdk.services.autoscalingplans.CfnScalingPlanProps;

      .. code-tab:: javascript

         // CfnScalingPlanProps is an interface

      .. code-tab:: typescript

         import { CfnScalingPlanProps } from '@aws-cdk/aws-autoscalingplans';





   .. py:attribute:: applicationSource

      ``AWS::AutoScalingPlans::ScalingPlan.ApplicationSource``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-autoscalingplans-scalingplan.html#cfn-autoscalingplans-scalingplan-applicationsource


      :type: :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlan.ApplicationSourceProperty`\  or :py:class:`@aws-cdk/cdk.Token`\ 


   .. py:attribute:: scalingInstructions

      ``AWS::AutoScalingPlans::ScalingPlan.ScalingInstructions``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-autoscalingplans-scalingplan.html#cfn-autoscalingplans-scalingplan-scalinginstructions


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-autoscalingplans.CfnScalingPlan.ScalingInstructionProperty`\ )[]


